Preventing result to overflow the result div

--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,5 @@
 	float: left;
 	border:1px solid;
 	padding: 10px;
+	overflow-x: auto;
 }
